:sparkles: Improve SEO

--- a/web/index.html
+++ b/web/index.html
@@ -15,12 +15,22 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Validador de CPF">
   <meta property="og:locale" content="pt-BR">
+  <meta property="og:url" content="https://validadorcpf.vercel.app/">
+  <meta property="og:img"
+    content="https://validadorcpf.vercel.app//assets/preview.png">
+  <meta name="twitter:title" content="Validador de CPF">
+  <meta name="twitter:description" content="Um validador de CPF gratuito.">
+  <meta name="og:type" content="website">
+  <meta name="twitter:url" content="https://validadorcpf.vercel.app/">
+  <meta name="twitter:img"
+    content="https://validadorcpf.vercel.app//assets/preview.png">
   <title>Validador de CPF</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css" type="text/css">
+  <link rel="canonical" href="https://validadorcpf.vercel.app/">
 </head>
 
 <body>
